fixed the bug where goal started too close to the navbar

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -837,3 +837,8 @@ blockquote cite {
 blockquote cite:before {
 	content: "\2014 \2009";
 }
+
+#goal{
+	width:100%;
+	max-width: 100%;
+}
